--- a/style.css
+++ b/style.css
@@ -1,6 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 
 /* common styles */
+img {
+  max-width: 100%;
+}
+
+@media (min-device-width: 400px) {
+  img[data-src-400px] {
+    content: attr(data-src-400px, url);
+  }
+}
+
+@media (min-device-width: 600px) {
+  img[data-src-600px] {
+    content: attr(data-src-600px, url);
+  }
+}
+
+@media (min-device-width: 800px) {
+  img[data-src-800px] {
+    content: attr(data-src-800px, url);
+  }
+}
+
+@media screen and (max-width: 299px) {
+  .fa-size {
+    font-size: 2em;
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 799px) {
+  .fa-size {
+    font-size: 4em;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .fa-size {
+    font-size: 8em;
+  }
+}
+@media (min-width: 640px) {
+  body {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 960px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
+@media (min-width: 1100px) {
+  body {
+    font-size: 1.5rem;
+  }
+}
 
 * {
   margin: 0;
@@ -8,7 +62,7 @@
   box-sizing: border-box;
   text-decoration: none;
   outline: none;
-  font-family: 'Amatic SC', cursive;
+  font-family: "Amatic SC", cursive;
   font-weight: 500;
 }
 /* End of common styles */
@@ -24,15 +78,15 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 9rem;
+  height: 9vw;
   width: 100%;
-  padding: 0 6rem;
+  padding: 0 6vw;
   z-index: 100;
   background-color: #444444;
 }
 
 .header-font {
-  font-size: 5rem;
+  font-size: 3vw;
   font-weight: 300;
   color: #997e5e;
 }
@@ -45,7 +99,7 @@ html {
 }
 
 .nav__item {
-  margin-left: 4rem;
+  margin-left: 4vw;
   color: #997e5e;
 }
 /*End of header*/
@@ -66,27 +120,27 @@ html {
 }
 
 .section-heading {
-  font-size: 12rem;
+  font-size: 7vw;
   font-weight: 800;
   color: darkslategrey;
   text-align: center;
   text-transform: capitalize;
-  letter-spacing: 0.5rem;
-  text-shadow: 0.4rem 0.4rem 0.4rem rgb(0, 0, 0);
+  letter-spacing: 0.3vw;
+  text-shadow: 0.2vw 0.2vw 0.2vw rgb(0, 0, 0);
 }
 
 .section-subheading {
-  font-size: 6rem;
+  font-size: 5vw;
   font-weight: 600;
-  text-shadow: 0.2rem 0.2rem 0.2rem rgb(0, 0, 0);
+  text-shadow: 0.2vw 0.2vw 0.2vw rgb(0, 0, 0);
 }
 
 .section-1-icons i {
-  font-size: 20rem;
+  font-size: 12vw;
   color: #997e5e;
   position: absolute;
   transform: translate(-50%, -50%) scale(0);
-  text-shadow: 0.3rem 0.3rem 0.3rem #808080;
+  text-shadow: 0.3vw 0.3vw 0.3vw #808080;
   transition: transform 0.3s;
 }
 
@@ -96,25 +150,25 @@ html {
 }
 
 .change-text:after {
-  content: '';
+  content: "";
   -webkit-animation-duration: 2s;
   animation: changetext 8s infinite linear;
   color: #ffffff;
   font-weight: 800;
-  text-shadow: 0px 0px 8px rgb(0, 0, 0), 0px 0px 8px rgb(0, 0, 0);
+  text-shadow: 0vw 0vw 0.5vw rgb(0, 0, 0), 0vw 0vw 0.5vw rgb(0, 0, 0);
 }
 @keyframes changetext {
   0% {
-    content: 'cse student';
+    content: "cse student";
   }
   33% {
-    content: 'Thinker';
+    content: "Problem solver";
   }
   66% {
-    content: 'Competitive programmer';
+    content: "Competitive programmer";
   }
   100% {
-    content: 'Web developer';
+    content: "Web developer";
   }
 }
 
@@ -122,20 +176,21 @@ html {
 
 /*Sectiion 2*/
 .section-2 {
-  width: 100%;
-  height: 100vh;
+  /* width: 100%;
+  height: 100vh; */
   background: linear-gradient(to top, bisque, rgb(41, 41, 41));
   /* background-color: rgb(41, 41, 41); */
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10rem 0;
+  padding: 10vw 0;
   transition: transform 1s, opacity 1s;
 }
 
 .section--hidden {
   opacity: 0;
-  transform: translateY(5rem);
+  transform: translateY(5vw);
 }
 
 .cards-container {
@@ -144,49 +199,50 @@ html {
 }
 
 .card {
-  width: 30rem;
-  height: 35rem;
-  padding: 4rem;
+  width: 20vw;
+  height: 28vw;
+  padding: 3vw;
   background-color: bisque;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 1rem 1rem 1rem #000;
+  box-shadow: 1vw 1vw 1vw #000;
   transition: transform 0.5s, box-shadow 0.5s;
-  border-radius: 0.5rem;
+  border-radius: 0.5vw;
+  margin-bottom: 0.5rem;
 }
 
 .card:hover {
-  transform: translateY(-4rem);
-  box-shadow: 2rem 2rem 2rem #000;
+  transform: translateY(-4vw);
+  box-shadow: 2vw 2vw 2vw #000;
 }
 
 /* 
 .card::before {
   content: "";
   height: 100%;
-  width: 1rem;
+  width: 1vw;
   background-color: #817824;
   position: absolute;
   top: 0;
-  left: -1rem;
+  left: -1vw;
   transform: skewY(45deg);
   transform-origin: right;
-  box-shadow: -0.1rem -0.1rem 0.1rem #000;
+  box-shadow: -0.1vw -0.1vw 0.1vw #000;
 }
 
 .card::after {
   content: "";
-  height: 1rem;
+  height: 1vw;
   width: 100%;
   background-color: #8f8317;
   position: absolute;
-  top: -1rem;
+  top: -1vw;
   left: 0;
   transform: skewX(45deg);
   transform-origin: bottom;
-  box-shadow: -0.1rem -0.1rem 0.1rem #000;
+  box-shadow: -0.1vw -0.1vw 0.1vw #000;
 } */
 
 .card-img {
@@ -194,26 +250,39 @@ html {
 }
 
 .card-name {
-  font-size: 2rem;
+  font-size: 2vw;
   font-weight: 900;
   text: uppercase;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.5vw;
   color: #111;
-  margin: 2rem 0;
-  text-shadow: 0.1rem 0.1rem 0.1rem #000;
+  margin: 2vw 0;
+  text-shadow: 0.1vw 0.1vw 0.1vw #000;
 }
 
 .card-btn {
-  width: 60%;
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
+  width: 70%;
+  border-radius: 0.5vw;
+  font-size: 1.5vw;
   font-weight: 600;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.2vw;
   text-transform: capitalize;
   border: none;
-  /* padding: 0.5rem 0; */
+  /* padding: 0.5vw 0; */
   cursor: pointer;
-  box-shadow: -0.05rem -0.05rem 0.05rem rgb(66, 66, 66);
+  box-shadow: -0.05vw -0.05vw 0.05vw rgb(66, 66, 66);
+}
+
+/*icons*/
+@media (max-width: 320px) {
+  .icon {
+    font-size: 0.1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .icon {
+    font-size: 0.75rem;
+  }
 }
 
 /* End of section 2 */
@@ -221,7 +290,7 @@ html {
 /* Section 3*/
 .section-3 {
   background-color: bisque;
-  padding: 5rem 0;
+  padding: 5vw 0;
   transition: transform 1s, opacity 1s;
 }
 
@@ -231,37 +300,37 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 10rem;
+  margin-top: 10vw;
 }
 
 .project-name {
   /* position: absolute; */
   text-align: left;
-  top: 3rem;
-  left: 3rem;
-  font-size: 5rem;
+  top: 3vw;
+  left: 3vw;
+  font-size: 5vw;
   font-weight: 500;
   color: #000;
-  letter-spacing: 0.1rem;
-  text-shadow: 0.1rem 0.1rem 0.1rem rgb(0, 0, 0);
+  letter-spacing: 0.1vw;
+  text-shadow: 0.1vw 0.1vw 0.1vw rgb(0, 0, 0);
 
   /* position: absolute;
-  top: 3rem; */
+  top: 3vw; */
 }
 
 .project-description {
   /* position: relative; */
   bottom: 3vw;
-  left: 2rem;
+  left: 2vw;
   width: 70%;
-  font-size: 3rem;
+  font-size: 3vw;
   font-weight: 450;
   text-transform: uppercase;
   color: #222;
 }
 
 .links {
-  font-size: 3rem;
+  font-size: 3vw;
   font-weight: 500;
   color: rgb(26, 60, 134);
 }
@@ -276,18 +345,18 @@ html {
   /* background-color: bisque; */
   display: flex;
   justify-content: space-around;
-  padding: 3rem 0;
+  padding: 3vw 0;
 }
 .copyright {
   position: absolute;
-  font-size: 3rem;
+  font-size: 3vw;
   font-weight: 900;
 }
 
 .social-media {
   display: flex;
   justify-content: center;
-  font-size: 3rem;
+  font-size: 3vw;
   list-style-type: none;
 }
 
@@ -314,16 +383,16 @@ html {
 
 .modal {
   font-family: Tahoma, sans-serif;
-  font-size: 3rem;
-  font-weight: 900;
+  font-size: 2vw;
+  font-weight: 500;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 60rem;
+  max-width: 60vw;
   background-color: #f3f3f3;
-  padding: 5rem 6rem;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  padding: 5vw 6vw;
+  box-shadow: 0 4vw 6vw rgba(0, 0, 0, 0.3);
   z-index: 1000;
   transition: all 0.5s;
 }
@@ -344,17 +413,17 @@ html {
   font-family: inherit;
   color: inherit;
   position: absolute;
-  top: 0.5rem;
-  right: 2rem;
-  font-size: 4rem;
+  top: 0.5vw;
+  right: 2vw;
+  font-size: 4vw;
   cursor: pointer;
   border: none;
   background: none;
 }
 
 .modal-text {
-  font-size: 3rem;
-  font-weight: 900;
+  font-size: 3vw;
+  font-weight: 500;
   position: relative;
 }
 
